sets min height on map containers in addition to 100% height as lack of the first caused issues on ios and only on the index page map

--- a/earthquakes/static/css/map-application.css
+++ b/earthquakes/static/css/map-application.css
@@ -134,21 +134,24 @@
 .prologue .dashboard #content-map-canvas {
     width: 100%;
     height: 100%;
-    /*z-index: 10;*/
+    min-height: 250px;
+    z-index: 10;
 }
 
 /* detail page map */
 .map #content-map-canvas {
     width: 100%;
     height: 100%;
-    /*z-index: 10;*/
+    min-height: 250px;
+    z-index: 10;
 }
 
 /* full screen map */
 .full-screen-map .dashboard #content-map-canvas {
     width: 100%;
     height: 1100px;
-    /*z-index: 10;*/
+    min-height: 250px;
+    z-index: 10;
 }
 
 /* all the maps */
